# my-little-dev-lab

./: .gitignore  CMakeLists.txt  wsjcpp.yml
data/: config.yml
data/html/: index.html
data/html/admin/: index.html
data/html/js/: index.js
src/: main.cpp  web_server.cpp  web_server.h
src-resources.wsjcpp/: __data_html_admin_index_html_path1c7bf8.cpp  __data_html_admin_index_html_path1c7bf8.h  __data_html_index_html_path92beac.cpp  __data_html_index_html_path92beac.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/HowardHinnant_date/: wsjcpp.hold.yml
src/employees/: employ_config.cpp  employ_config.h
src/wsjcpp_resources/: __data_html_admin_index_html_path5f17ec.cpp  __data_html_admin_index_html_path5f17ec.h  __data_html_index_html_pathffd2bc.cpp  __data_html_index_html_pathffd2bc.h
